--- a/app/src/main/res/layout/fragment_menu_rv_item.xml
+++ b/app/src/main/res/layout/fragment_menu_rv_item.xml
@@ -2,7 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:padding="@dimen/fragment_menu_rv_item_padding">
+
+    <LinearLayout
+        android:id="@+id/fragment_menu_rv_item_sectionTitle"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/fragment_menu_rv_item_sectionTitle_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="36sp"
+            android:textColor="@android:color/black"
+            android:text="Лосось"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_gravity="center"
@@ -91,6 +109,8 @@
             android:layout_height="@dimen/fragment_menu_rv_item_icon_height"
             android:scaleType="fitXY"
             />
+    </LinearLayout>
+
     </LinearLayout>
 
 
