--- a/app/src/main/res/layout/fragment_basket_bsv_order.xml
+++ b/app/src/main/res/layout/fragment_basket_bsv_order.xml
@@ -29,10 +29,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        <LinearLayout
             android:id="@+id/fragment_basket_bsv_container_addresses"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"/>
+            <ProgressBar
+                android:id="@+id/fragment_basket_bsv_container_addresses_progressBar"
+                android:layout_width="15dp"
+                android:layout_height="15dp"/>
+        </LinearLayout>
     </HorizontalScrollView>
 
     <LinearLayout
